Mon Nov  9 03:29:31 UTC 2009  William R. Otte  <wotte@dre.vanderbilt.edu>

        * TAO_IDL/be/be_interface.cpp:

          Added the process ID to the temporary file used for gperf, due
          to a perhaps weak random number generator not being random
          enough for parallel builds on OS X. 
        
Fri Nov  6 10:13:00 UTC 2009  Simon Massey  <sma at prismtech dot com>

        * TAO_IDL/driver/drv_preproc.cpp:
        * TAO_IDL/driver/drv_mcpp_preproc.cpp:

          Updated DRV_add_include_path() space within roots and
          directory slash handling. (TAO782) It wasn't detecting
          or handling spaced roots or trailing directory slashes
          correctly.

        * TAO_IDL/util/utl_global.cpp:

          Allow for the gperf absolute directory path to contain spaces.

Thu Nov  5 12:48:31 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO_IDL/be/be_codegen.cpp:
          Don't generate an include for CIAO_common.h anymore

Thu Nov  5 12:24:52 UTC 2009  Vladimir Zykov  <vladimir.zykov@prismtech.com>

        * tests/Bug_3748_Regression/run_test.pl:
          Extended the time for running client.

Thu Nov  5 10:48:07 UTC 2009  Vladimir Zykov  <vladimir.zykov@prismtech.com>

        * tests/Bug_3748_Regression/server.cpp:
          Fixed warnings.

Wed Nov  4 20:57:08 UTC 2009  Yan Dai  <dai_y@ociweb.com>

        * MPC/config/notify_monitor_control.mpb:

          Disable this feature on wince=1 build.

Tue Nov  3 17:32:03 UTC 2009  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/fe/fe_init.cpp:

          Added IDL3+ keywords to the list used to check for clashes
          and leading underscore retention.

        * TAO_IDL/fe/y.tab.cpp:
        * TAO_IDL/fe/idl.yy:

          Added creation of uses multiple-specific struct and sequence
          nodes in the AST when the uses multiple port
          appears in an extended port declaration, identically to what