@@ -37,7 +37,6 @@ ACE_RCSID (be,
 
 static const char copyright[] =
 "// -*- C++ -*-\n"
-"//\n"
 "// $I" "d$\n\n"
 "/**\n"
 " * Code generated by the The ACE ORB (TAO) IDL Compiler v" TAO_VERSION "\n"
